# bevy_vr_controller

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: player.rs
src/: eye_offset.rs  first_person.rs  head.rs  ik.rs  input.rs  lib.rs  look.rs  movement.rs  player.rs
src/animation/: defaults.rs  load.rs  mixamo.rs  mod.rs  weights.rs
src/ik/: mod.rs  systems.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  xr.rs
