[package]
name = "bevy_vr_controller"
description = "VR character controller for Bevy"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/unavi-xyz/bevy_vr_controller"
license = "MIT OR Apache-2.0"

[lints.clippy]
type_complexity = "allow"

[dependencies]
avian3d = "0.1.2"
bevy = { version = "0.14.2", default-features = false, features = [
  "bevy_gltf",
] }
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr" }
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr" }
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.1"
bevy_vrm = "0.0.12"
bevy_xr_utils = { git = "https://github.com/awtterpip/bevy_oxr" }
paste = "1.0.15"
bevy_mod_picking = "0.20.1"
bevy_transform_gizmo = "0.12.0"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.70", features = ["Navigator", "Window"] }

[dev-dependencies]
bevy = "0.14.2"
