[package]
name = "bevy_vr_controller"
description = "VR character controller for Bevy"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/unavi-xyz/bevy_vr_controller"
license = "MIT OR Apache-2.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = ["xr"]
xr = ["dep:bevy_mod_openxr", "dep:bevy_mod_xr", "dep:bevy_xr_utils"]

[dependencies]
avian3d = "0.1.2"
bevy = { version = "0.14.2", default-features = false, features = [
  "bevy_gltf",
] }
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.1"
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr", optional = true }
bevy_vrm = "0.0.12"
bevy_xr_utils = { git = "https://github.com/awtterpip/bevy_oxr", optional = true }
paste = "1.0.15"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.70", features = ["Navigator", "Window"] }

[dev-dependencies]
bevy = "0.14.2"
